--- a/Week5_Grids/about.html
+++ b/Week5_Grids/about.html
@@ -63,33 +63,34 @@
         </nav>   
       </div>
   		<header class="grid">
-  			<div class="col-6of24">
-  				<a href="index.html"><img class="logo" src="img/logo1.jpg" width="225" height="60"></a>
-  			</div>
+  			
   			<nav class="header">
+          <div class="col-6of24">
+            <a href="index.html"><img class="logo" src="img/logo1.jpg" width="225" height="60"></a>
+          </div>
 	  			<div class="col-2of24">
 	  				<p><a class="onpage" href="about.html">ABOUT</a></p>
 	  			</div>
 	  			<div class="col-2of24">
-	  				<p><a href="news.html">NEWS</a></p>
+	  				<p><a id="topnav" href="news.html">NEWS</a></p>
 	  			</div>
 	  			<div class="col-2of24">
-	  				<p><a href="menu.html">MENU</a></p>
+	  				<p><a id="topnav" href="menu.html">MENU</a></p>
 	  			</div>
 	  			<div class="col-4of24">
-	  				<p><a href="choosenoodle.html">CREATE NOODLES</a></p>
+	  				<p><a id="topnav" href="choosenoodle.html">CREATE NOODLES</a></p>
 	  			</div>
 	  			<div class="col-1of24">
 	  				<p></p>
 	  			</div>
 	  			<div class="col-2of24">
-	  				<p><a href="contact.html">CONTACT</a></p>
+	  				<p><a id="topnav" href="contact.html">CONTACT</a></p>
 	  			</div>
 	  			<div class="col-3of24">
-	  				<p><a href="cart.html">MY CART</a></p>
+	  				<p><a id="topnav" href="cart.html">MY CART</a></p>
 	  			</div>
 	  			<div class="col-2of24">
-	  				<p><a href="login.html">LOG IN</a></p>
+	  				<p><a id="topnav" href="login.html">LOG IN</a></p>
 	  			</div>
   			</nav>
   		</header>
@@ -112,7 +113,7 @@
 
   				<article id="history">
   					<h1 class="global">HISTORY</h1>
-  					<P class="history">In 1950s, Sam Wong was a independent street vendor operated on roadsides in Shau Kei Wan, a low-income district in Hong Kong. He used his vendor and sold large quantities noodles for a cheap price, which benefits the locals.<br>He starts his cart noodle restaurant since his twenties. In 1960s, Sam earned </P>
+  					<P class="history">In 1950s, Sam Wong was an independent street vendor operated on roadsides in Shau Kei Wan, a low-income district in Hong Kong. He used his vendor and sold large quantities noodles for a cheap price, which benefits the locals. He worked as an independent street vendor for 1970. He never have any breaks.<br>In 1971, he starts his cart noodle restaurant with his wife. He also sold drinks Customers can enjoy eating the cart noodles and dinking those Hong Kong style drinks nicely in a restaurant. <br>In 1980, Sam and his family immigrated to Vancouver. He found that not many Hong Kong style cart noodle restaurant in Vancouver, he saw the opportunity to start his business here.<br>In 1983, he opened his first cart noodle restaurant in Joyce, named NOOD. It attracted many customers came all the way to Joyce. There is always a long queue outside NOOD, even todays.<br>In 2014, Sam and his son, John open their second in Downtown Vancouver. They add the soup and dessert in the menu, so more people can try the special Hong Kong style food. They are not expensive but they are delicious. You will love it after your first try!</P>
             <h2>"From cart to restaurant, effort only fully releases its reward after we refuse to quit."</h2>
             <img class="about" src="img/history.jpg">
             <a class="about" href="news.html">OUR NEWS</a>
