--- a/Week5_Grids/choosenoodle.html
+++ b/Week5_Grids/choosenoodle.html
@@ -61,19 +61,19 @@
             <p><a href="login.html">LOG IN</a></p>
         </nav>   
       </div>
-  		<header class="grid">
-  			<div class="col-6of24">
-  				<a href="index.html"><img class="logo" src="img/logo1.jpg" width="225" height="60"></a>
-  			</div>
+  		<header class="grid">	
   			<nav class="header">
+          <div class="col-6of24">
+            <a href="index.html"><img class="logo" src="img/logo1.jpg" width="225" height="60"></a>
+          </div>
 	  			<div class="col-2of24">
-	  				<p><a href="about.html">ABOUT</a></p>
+	  				<p><a id="topnav" href="about.html">ABOUT</a></p>
 	  			</div>
 	  			<div class="col-2of24">
-	  				<p><a href="news.html">NEWS</a></p>
+	  				<p><a id="topnav" href="news.html">NEWS</a></p>
 	  			</div>
 	  			<div  class="col-2of24">
-	  				<p><a href="menu.html">MENU</a></p>
+	  				<p><a id="topnav" href="menu.html">MENU</a></p>
 	  			</div>
 	  			<div class="col-4of24">
 	  				<p><a class="onpage" href="choosenoodle.html">CREATE NOODLES</a></p>
@@ -82,13 +82,13 @@
 	  				<p></p>
 	  			</div>
 	  			<div class="col-2of24">
-	  				<p><a href="contact.html">CONTACT</a></p>
+	  				<p><a id="topnav" href="contact.html">CONTACT</a></p>
 	  			</div>
 	  			<div class="col-3of24">
-	  				<p><a href="cart.html">MY CART</a></p>
+	  				<p><a id="topnav" href="cart.html">MY CART</a></p>
 	  			</div>
 	  			<div class="col-2of24">
-	  				<p><a href="login.html">LOG IN</a></p>
+	  				<p><a id="topnav" href="login.html">LOG IN</a></p>
 	  			</div>
   			</nav>
   		</header>
@@ -109,16 +109,16 @@
           <article id="cartnoodles">
   					<h1 class="global">CHOOSE YOUR NOODLE</h1>
   					<div id="createnood"class="col-1of3">
-              <img id ="unselected" class="menu" src="img/noodle_egg.jpg" width="210" height="150">
+              <img id ="unselected" class="menu" src="img/noodle_egg.jpg">
               <p class="cartNrow">Egg Noodle</p>
               <p class="cartProw">$2.00</p>
-              <p class="cartDrow">Thin lye-water noodles made with flour and eggs</p>
+              <p class="cartDrow">Lye-water noodles made with flour and eggs</p>
               <img class="rating"src="img/star.jpg">
               <a class="prodcomment" href="">14 Comments</a>
   					</div>
 
   					<div id="createnood" class="col-1of3">
-  						<img class="menu"src="img/noodle_thick.jpg" width="210" heigh="150">
+  						<img id ="unselected" class="menu"src="img/noodle_thick.jpg">
   						<p class="cartNrow">Thick Noodle</p>
   						<p class="cartProw">$2.00</p>
               <p class="cartDrow">Thick wheat noodle made with flour and eggs</p>
@@ -127,7 +127,7 @@
   					</div>
 
   					<div id="createnood" class="col-1of3">
-  						<img class="menu"src="img/noodle_thin.jpg" width="210" heigh="150">
+  						<img id ="unselected" class="menu"src="img/noodle_thin.jpg">
               <p class="cartNrow">Thin Noodle</p>
               <p class="cartProw">$2.00</p>
               <p class="cartDrow">Made with rice and water without salt</p>
@@ -136,7 +136,7 @@
   					</div>
 
   					<div id="createnood" class="col-1of3">
-  						<img class="menu"src="img/noodle_rice.jpg" width="210" heigh="150">
+  						<img id ="unselected" class="menu"src="img/noodle_rice.jpg">
               <p class="cartNrow">Rice Noodle</p>
               <p class="cartProw">$2.00</p>
               <p class="cartDrow">Very wide, flat, rice noodles that are slippery</p>
@@ -145,7 +145,7 @@
   					</div>
 
   					<div id="createnood" class="col-1of3">
-  						<img class="menu"src="img/noodle_instant.jpg" width="210" heigh="150">
+  						<img  id ="unselected" class="menu"src="img/noodle_instant.jpg">
               <p class="cartNrow">Instant Noodle</p>
               <p class="cartProw">$2.00</p>
               <p class="cartDrow">Dried noodles made from wheat flour and salt</p>
@@ -154,40 +154,13 @@
   					</div>
 
   					<div id="createnood" class="col-1of3">
-  						<img class="menu"src="img/noodle_udon.jpg" width="210" heigh="150">
-              <p class="cartNrow">Undo</p>
+  						<img class="menu"src="img/noodle_udon.jpg">
+              <p class="cartNrow">Udon</p>
               <p class="cartProw">$2.00</p>
-              <p class="cartDrow">Thick, rounded, wheat noodles</p>
+              <p class="cartDrow">Thick, rounded and wheat noodles</p>
               <img class="rating"src="img/star.jpg">
               <a class="prodcomment" href="">14 Comments</a>
   					</div>
-
-<!--   					<div class="col-1of3">
-              <img class="menu" src="img/noodle_egg.jpg" width="210" height="150">
-              <p class="cartNrow">Egg Noodle</p>
-              <p class="cartProw">$2.00</p>
-              <p class="cartDrow">Thin Noodle made with flour and eggs</p>
-              <img class="rating"src="img/star.jpg">
-              <a class="prodcomment" href="">14 Comments</a>
-            </div>
-
-            <div class="col-1of3">
-              <img class="menu"src="img/noodle_thick.jpg" width="210" heigh="150">
-              <p class="cartNrow">Thick Noodle</p>
-              <p class="cartProw">$2.00</p>
-              <p class="cartDrow">Thick Noodle made with flour and eggs</p>
-              <img class="rating"src="img/star.jpg">
-              <a class="prodcomment" href="">10 Comments</a>
-            </div>
-
-            <div class="col-1of3">
-              <img class="menu"src="img/noodle_thin.jpg" width="210" heigh="150">
-              <p class="cartNrow">Thin Noodle</p>
-              <p class="cartProw">$2.00</p>
-              <p class="cartDrow">Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
-              <img class="rating"src="img/star.jpg">
-              <a class="prodcomment" href="">14 Comments</a>
-            </div> -->
   				</article>
          
   			</div>
