--- a/Week5_Grids/choosesoup.html
+++ b/Week5_Grids/choosesoup.html
@@ -62,18 +62,18 @@
         </nav>   
       </div>
   		<header class="grid">
-  			<div class="col-6of24">
-  				<a href="index.html"><img class="logo" src="img/logo1.jpg" width="225" height="60"></a>
-  			</div>
   			<nav class="header">
+          <div class="col-6of24">
+            <a href="index.html"><img class="logo" src="img/logo1.jpg" width="225" height="60"></a>
+          </div>
 	  			<div class="col-2of12">
-	  				<p><a href="about.html">ABOUT</a></p>
+	  				<p><a id="topnav" href="about.html">ABOUT</a></p>
 	  			</div>
 	  			<div class="col-2of24">
-	  				<p><a href="news.html">NEWS</a></p>
+	  				<p><a id="topnav" href="news.html">NEWS</a></p>
 	  			</div>
 	  			<div  class="col-2of24">
-	  				<p><a href="menu.html">MENU</a></p>
+	  				<p><a id="topnav" href="menu.html">MENU</a></p>
 	  			</div>
 	  			<div class="col-4of24">
 	  				<p><a class="onpage" href="choosenoodle.html">CREATE NOODLES</a></p>
@@ -82,13 +82,13 @@
 	  				<p></p>
 	  			</div>
 	  			<div class="col-2of24">
-	  				<p><a href="contact.html">CONTACT</a></p>
+	  				<p><a id="topnav" href="contact.html">CONTACT</a></p>
 	  			</div>
 	  			<div class="col-3of24">
-	  				<p><a href="cart.html">MY CART</a></p>
+	  				<p><a id="topnav" href="cart.html">MY CART</a></p>
 	  			</div>
 	  			<div class="col-2of24">
-	  				<p><a href="login.html">LOG IN</a></p>
+	  				<p><a id="topnav" href="login.html">LOG IN</a></p>
 	  			</div>
   			</nav>
   		</header>
@@ -111,7 +111,7 @@
   				<article id="cartnoodles">
   					<h1 class="global">CHOOSE YOUR SOUP</h1>
   					<div id="createnood" class="col-1of3">
-  						<img id ="unselected" class="menu"src="img/soup_chicken.jpg" width="210" heigh="150">
+  						<img id ="unselected" class="menu"src="img/soup_chicken.jpg">
               <p class="cartNrow">Chicken Soup</p>
               <p class="cartProw">$2.00</p>
               <p class="cartDrow">Boiled chicken soup with fresh ginger can fight against cold</p>
@@ -120,16 +120,16 @@
   					</div>
 
   					<div id="createnood" class="col-1of3">
-  						<img class="menu"src="img/soup_spicy.jpg" width="210" heigh="150">
+  						<img id ="unselected" class="menu"src="img/soup_spicy.jpg">
               <p class="cartNrow">Spicy Seafood Soup</p>
               <p class="cartProw">$2.00</p>
-              <p class="cartDrow">Sweet shrimp, calamari, oyster and parsley</p>
+              <p class="cartDrow">Sweet shrimp, calamari, oyster, parsley and green onions</p>
               <img class="rating"src="img/star.jpg">
               <a class="prodcomment" href="">20 Comments</a>
   					</div>
 
   					<div id="createnood" class="col-1of3">
-  						<img class="menu"src="img/soup_superspicy.jpg" width="210" heigh="150">
+  						<img id ="unselected" class="menu"src="img/soup_superspicy.jpg">
               <p class="cartNrow">Super Spicy Soup</p>
               <p class="cartProw">$2.00</p>
               <p class="cartDrow">Sichuanese peppercorn, chili pepper and simmered with oil</p>
@@ -138,7 +138,7 @@
   					</div>
 
   					<div id="createnood" class="col-1of3">
-  						<img class="menu"src="img/soup_tomato.jpg" width="210" heigh="150">
+  						<img id ="unselected" class="menu"src="img/soup_tomato.jpg">
               <p class="cartNrow">Tomato Soup</p>
               <p class="cartProw">$2.00</p>
               <p class="cartDrow">Small pieces of tomato, onion with chicken soup</p>
@@ -147,7 +147,7 @@
   					</div>
 
             <div id="createnood" class="col-1of3">
-              <img class="menu"src="img/soup_egg.jpg" width="210" heigh="150">
+              <img id ="unselected" class="menu"src="img/soup_egg.jpg">
               <p class="cartNrow">Egg Soup</p>
               <p class="cartProw">$2.00</p>
               <p class="cartDrow">Mixed egg, corn and flour, which is a thick soup</p>
@@ -156,7 +156,7 @@
             </div>
 
   					<div id="createnood" class="col-1of3">
-  						<img class="menu"src="img/soup_medicine.jpg" width="210" heigh="150">
+  						<img id ="unselected" class="menu"src="img/soup_medicine.jpg">
               <p class="cartNrow">Wolfberries Soup</p>
               <p class="cartProw">$2.00</p>
               <p class="cartDrow">A chinese medicine that preserves youth and health</p>
