--- a/Week5_Grids/choosetoppings.html
+++ b/Week5_Grids/choosetoppings.html
@@ -61,19 +61,20 @@
             <p><a href="login.html">LOG IN</a></p>
         </nav>   
       </div>
+
   		<header class="grid">
-  			<div class="col-6of24">
-  				<a href="index.html"><img class="logo" src="img/logo1.jpg" width="225" height="60"></a>
-  			</div>
   			<nav class="header">
+          <div class="col-6of24">
+            <a href="index.html"><img class="logo" src="img/logo1.jpg" width="225" height="60"></a>
+          </div>
 	  			<div class="col-2of24">
-	  				<p><a href="about.html">ABOUT</a></p>
+	  				<p><a id="topnav" href="about.html">ABOUT</a></p>
 	  			</div>
 	  			<div class="col-2of24">
-	  				<p><a href="news.html">NEWS</a></p>
+	  				<p><a id="topnav" href="news.html">NEWS</a></p>
 	  			</div>
 	  			<div  class="col-2of24">
-	  				<p><a href="menu.html">MENU</a></p>
+	  				<p><a id="topnav" href="menu.html">MENU</a></p>
 	  			</div>
 	  			<div class="col-4of24">
 	  				<p><a class="onpage" href="choosenoodle.html">CREATE NOODLES</a></p>
@@ -82,13 +83,13 @@
 	  				<p></p>
 	  			</div>
 	  			<div class="col-2of24">
-	  				<p><a href="contact.html">CONTACT</a></p>
+	  				<p><a id="topnav" href="contact.html">CONTACT</a></p>
 	  			</div>
 	  			<div class="col-3of24">
-	  				<p><a href="cart.html">MY CART</a></p>
+	  				<p><a id="topnav" href="cart.html">MY CART</a></p>
 	  			</div>
 	  			<div class="col-2of24">
-	  				<p><a href="login.html">LOG IN</a></p>
+	  				<p><a id="topnav" href="login.html">LOG IN</a></p>
 	  			</div>
   			</nav>
   		</header>
@@ -138,7 +139,7 @@
             </div> -->
 
   					<div id="createnood" class="col-1of3">
-  						<img class="menu"src="img/topping_chickenwing.jpg" width="210" heigh="150">
+  						<img id ="unselected" class="menu"src="img/topping_chickenwing.jpg">
               <p class="cartNrow">Chicken Wings</p>
               <p class="cartProw">$1.50</p>
               <p class="cartDrow">Golden deep fried chicken wings by mixed flour salt</p>
@@ -165,35 +166,16 @@
   					</div> -->
 
   					<div id="createnood" class="col-1of3">
-  						<img class="menu"src="img/topping_fishball.jpg" width="210" heigh="150">
+  						<img id ="unselected" class="menu"src="img/topping_fishball.jpg">
               <p class="cartNrow">Curry Fishball</p>
               <p class="cartProw">$1.50</p>
               <p class="cartDrow">Fried fishballs with yellow curry sauce, less spicy</p>
               <img class="rating"src="img/star.jpg">
               <a class="prodcomment" href="">14 Comments</a>
   					</div>
-<!-- 
-  					<div class="col-1of3">
-  						<img class="menu"src="img/topping_fishball.jpg" width="210" heigh="150">
-              <p class="cartNrow">Curry Fishball</p>
-              <p class="cartProw">$1.50</p>
-              <p class="cartDrow">Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
-              <img class="rating"src="img/star.jpg">
-              <a class="prodcomment" href="">14 Comments</a>
-  					</div>
-
-            <div class="col-1of3">
-              <img class="menu"src="img/topping_fishball.jpg" width="210" heigh="150">
-              <p class="cartNrow">Curry Fishball</p>
-              <p class="cartProw">$1.50</p>
-              <p class="cartDrow">Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
-              <img class="rating"src="img/star.jpg">
-              <a class="prodcomment" href="">14 Comments</a>
-            </div> -->
-
 
             <div id="createnood" class="col-1of3">
-              <img class="menu"src="img/topping_vege.jpg" width="210" heigh="150">
+              <img id ="unselected" class="menu"src="img/topping_vege.jpg">
               <p class="cartNrow">Green Vegetable</p>
               <p class="cartProw">$1.50</p>
               <p class="cartDrow">Seasonal choice, cabbage, pak choy and choy sun </p>
@@ -202,7 +184,7 @@
             </div>
 
             <div id="createnood" class="col-1of3">
-              <img class="menu"src="img/topping_tomato.jpg" width="210" heigh="150">
+              <img id ="unselected" class="menu"src="img/topping_tomato.jpg">
               <p class="cartNrow">Tomato</p>
               <p class="cartProw">$1.50</p>
               <p class="cartDrow">Five sliced fresh tomate, can ask for cooked tomate</p>
@@ -211,8 +193,8 @@
             </div>
 
             <div id="createnood" class="col-1of3">
-              <img class="menu"src="img/topping_tofu.jpg" width="210" heigh="150">
-              <p class="cartNrow">Tofu</p>
+              <img id ="unselected" class="menu"src="img/topping_tofu.jpg">
+              <p class="cartNrow">White Tofu</p>
               <p class="cartProw">$1.50</p>
               <p class="cartDrow">Made by coagulating soy milk and result in soft white blocks</p>
               <img class="rating"src="img/star.jpg">
