--- a/Week5_Grids/index.html
+++ b/Week5_Grids/index.html
@@ -19,16 +19,16 @@
           </div>
 
           <nav id ="tablet"class="header">
-          <div class="col-1of4">
-            <p><a href="menu.html">FOOD MENU</a></p>
-          </div>
-          <div class="col-1of4">
-            <p><a href="choosenoodle.html">CREATE NOODLE </a></p>
-          </div>
-          <div class="col-1of4">
-            <p class="mobile"><a class="menutop1"><span class="line"></span></a></p>      
-          </div>
-        </nav>   
+            <div class="col-1of4">
+              <p><a href="menu.html">FOOD MENU</a></p>
+            </div>
+            <div class="col-1of4">
+              <p><a href="choosenoodle.html">CREATE NOODLE </a></p>
+            </div>
+            <div class="col-1of4">
+              <p class="tablet"><a class="menutop1"><span class="line"></span></a></p>      
+            </div>
+          </nav>   
       </div>
       <div id="tablet2" class="grid">
 
@@ -64,34 +64,35 @@
       </div>
 
   		<header id="windows" class="grid">
-  			<div class="col-6of24">
-  				<a  href="index.html"><img class="logo" src="img/logo1.jpg" width="225" height="60"></a>
-  			</div>
+  			
        
   			<nav class="header">
+          <div class="col-6of24">
+            <a  href="index.html"><img class="logo" src="img/logo1.jpg" width="225" height="60"></a>
+          </div>
 	  			<div class="col-2of24">
-	  				<p><a href="about.html">ABOUT</a></p>
+	  				<p><a id="topnav" href="about.html">ABOUT</a></p>
 	  			</div>
 	  			<div class="col-2of24">
-	  				<p><a href="news.html">NEWS</a></p>
+	  				<p><a id="topnav"href="news.html">NEWS</a></p>
 	  			</div>
 	  			<div class="col-2of24">
-	  				<p><a href="menu.html">MENU</a></p>
+	  				<p><a id="topnav"href="menu.html">MENU</a></p>
 	  			</div>
 	  			<div class="col-4of24">
-	  				<p><a href="choosenoodle.html">CREATE NOODLES</a></p>
+	  				<p><a id="topnav" href="choosenoodle.html">CREATE NOODLES</a></p>
 	  			</div>
 	  			<div class="col-1of24">
 	  				<p></p>
 	  			</div>
 	  			<div class="col-2of24">
-	  				<p><a href="contact.html">CONTACT</a></p>
+	  				<p><a id="topnav" href="contact.html">CONTACT</a></p>
 	  			</div>
 	  			<div class="col-3of24">
-	  				<p><a href="cart.html">MY CART</a></p>
+	  				<p><a id="topnav" href="cart.html">MY CART</a></p>
 	  			</div>
 	  			<div class="col-2of24">
-	  				<p><a href="login.html">LOG IN</a></p>
+	  				<p><a id="topnav" href="login.html">LOG IN</a></p>
 	  			</div>
   			</nav>
   		</header>
@@ -116,7 +117,7 @@
             <div class="rowGlobalsideimage">
               <a href="index.html"><p class="homesideonpage"><img class="homeside"src="img/homeside_s1.jpg" width="250" height="40" alt="Street Snack"> NEW STREET SNACK NOODLE</p></a>
 
-              <a href="index2.html"><p class="homeside"><img class="homeside"src="img/homeside_s2.jpg" width="250" height="40">NEW STORE OPENS</p></a>
+              <a href="index2.html"><p class="homeside"><img class="homeside"src="img/homeside_s2.jpg" width="250" height="40">NEW STORE OPENING TODAY</p></a>
 
               <a href="index3.html"><p class="homeside"><img class="homeside"src="img/homeside_s3.jpg" width="250" height="40">PROMOTION CODE: get1free</p></a>
             </div>
