--- a/Week5_Grids/menu.html
+++ b/Week5_Grids/menu.html
@@ -62,34 +62,35 @@
             <p><a href="login.html">LOG IN</a></p>
         </nav>   
       </div>
+
   		<header class="grid">
-  			<div class="col-6of24">
-  				<a href="index.html"><img class="logo" src="img/logo1.jpg" width="225" height="60"></a>
-  			</div>
   			<nav class="header">
+          <div class="col-6of24">
+            <a href="index.html"><img class="logo" src="img/logo1.jpg" width="225" height="60"></a>
+          </div>
 	  			<div class="col-2of24">
-	  				<p><a href="about.html">ABOUT</a></p>
+	  				<p><a id="topnav" href="about.html">ABOUT</a></p>
 	  			</div>
 	  			<div class="col-2of24">
-	  				<p><a href="news.html">NEWS</a></p>
+	  				<p><a id="topnav" href="news.html">NEWS</a></p>
 	  			</div>
 	  			<div  class="col-2of24">
 	  				<p><a class="onpage" href="menu.html">MENU</a></p>
 	  			</div>
 	  			<div class="col-4of24">
-	  				<p><a href="choosenoodle.html">CREATE NOODLES</a></p>
+	  				<p><a id="topnav" href="choosenoodle.html">CREATE NOODLES</a></p>
 	  			</div>
 	  			<div class="col-1of24">
 	  				<p></p>
 	  			</div>
 	  			<div class="col-2of24">
-	  				<p><a href="contact.html">CONTACT</a></p>
+	  				<p><a id="topnav" href="contact.html">CONTACT</a></p>
 	  			</div>
 	  			<div class="col-3of24">
-	  				<p><a href="cart.html">MY CART</a></p>
+	  				<p><a id="topnav" href="cart.html">MY CART</a></p>
 	  			</div>
 	  			<div class="col-2of24">
-	  				<p><a href="login.html">LOG IN</a></p>
+	  				<p><a id="topnav" href="login.html">LOG IN</a></p>
 	  			</div>
   			</nav>
   		</header>
@@ -111,7 +112,7 @@
               <!-- <img class="menu"src="img/nood1.jpg" width="210" height="150"> -->
 
               <div class="view-first">  
-                  <a href="detailview.html"><img class="menu"src="img/nood1.jpg" width="210" height="150"></a>
+                  <a href="detailview.html"><img class="menu"src="img/nood1.jpg"></a>
                  <div class="mask">  
                      <a href="detailview.html" class="info">VIEW DETAILS</a>  
                  </div>  
@@ -120,13 +121,13 @@
   						<p class="cartProw">$6.75</p>
               <p class="cartDrow">Curry fried fishballs with homemade special soup</p>
               <img class="rating"src="img/star.jpg">
-              <a class="prodcomment" href="">56 Comments</a>
+              <a class="prodcomment" href="detailview.html">56 Comments</a>
   					</div>
 
   					<div class="col-1of3" id="menu">
   						<!-- <img class="menu"src="img/nood2.jpg" width="210" height="150"> -->
               <div class="view-first">  
-                  <a href="detailview.html"><img class="menu"src="img/nood2.jpg" width="210" height="150"></a>
+                  <a href="detailview.html"><img class="menu"src="img/nood2.jpg"></a>
                  <div class="mask">  
                      <a href="detailview.html" class="info">VIEW DETAILS</a>  
                  </div>  
@@ -135,13 +136,13 @@
               <p class="cartProw">$6.75</p>
               <p class="cartDrow">Have a balanced meal, 2:1 in vegetables and meat</p>
               <img class="rating"src="img/star.jpg">
-              <a class="prodcomment" href="">60 Comments</a>
+              <a class="prodcomment" href="detailview.html">60 Comments</a>
   					</div>
 
   					<div class="col-1of3" id="menu">
   						<!-- <img class="menu"src="img/nood3.jpg" width="210" height="150"> -->
               <div class="view-first">  
-                  <a href="detailview.html"><img class="menu"src="img/nood3.jpg" width="210" height="150"></a>
+                  <a href="detailview.html"><img class="menu"src="img/nood3.jpg"></a>
                  <div class="mask">  
                      <a href="detailview.html" class="info">VIEW DETAILS</a>  
                  </div>  
@@ -150,12 +151,12 @@
               <p class="cartProw">$6.75</p>
               <p class="cartDrow">Beef balls, omasum, also with vegetables</p>
               <img class="rating"src="img/star.jpg">
-              <a class="prodcomment" href="">48 Comments</a>
+              <a class="prodcomment" href="detailview.html">48 Comments</a>
   					</div>
             <div class="col-1of3" id="menu">
               <!-- <img class="menu"src="img/nood4.jpg" width="210" height="150"> -->
               <div class="view-first">  
-                  <a href="detailview.html"><img class="menu"src="img/nood4.jpg" width="210" height="150"></a>
+                  <a href="detailview.html"><img class="menu"src="img/nood4.jpg"></a>
                  <div class="mask">  
                      <a href="detailview.html" class="info">VIEW DETAILS</a>  
                  </div>  
@@ -164,13 +165,13 @@
               <p class="cartProw">$6.75</p>
               <p class="cartDrow">Pig skin, pig's blood, pig intestine and sausage</p>
               <img class="rating"src="img/star.jpg">
-              <a class="prodcomment" href="">50 Comments</a>
+              <a class="prodcomment" href="detailview.html">50 Comments</a>
             </div>
 
             <div class="col-1of3" id="menu">
               <!-- <img class="menu"src="img/nood5.jpg" width="210" height="150"> -->
               <div class="view-first">  
-                  <a href="detailview.html"><img class="menu"src="img/nood5.jpg" width="210" height="150"></a>
+                  <a href="detailview.html"><img class="menu"src="img/nood5.jpg"></a>
                  <div class="mask">  
                      <a href="detailview.html" class="info">VIEW DETAILS</a>  
                  </div>  
@@ -179,13 +180,13 @@
               <p class="cartProw">$6.75</p>
               <p class="cartDrow">Special nood for vegetarians, rice noodle with tomate soup</p>
               <img class="rating"src="img/star.jpg">
-              <a class="prodcomment" href="">70 Comments</a>
+              <a class="prodcomment" href="detailview.html">70 Comments</a>
             </div>
 
             <div class="col-1of3" id="menu">
               <!-- <img class="menu"src="img/nood6.jpg" width="210" height="150"> -->
               <div class="view-first">  
-                  <a href="detailview.html"><img class="menu"src="img/nood6.jpg" width="210" height="150"></a>
+                  <a href="detailview.html"><img class="menu"src="img/nood6.jpg"></a>
                  <div class="mask">  
                      <a href="detailview.html" class="info">VIEW DETAILS</a>  
                  </div>  
@@ -194,7 +195,7 @@
               <p class="cartProw">$6.75</p>
               <p class="cartDrow">Special nood for who like soft food, different kinds of tofu</p>
               <img class="rating"src="img/star.jpg">
-              <a class="prodcomment" href="">67 Comments</a>
+              <a class="prodcomment" href="detailview.html">67 Comments</a>
             </div>
           </article>
 
@@ -203,7 +204,7 @@
             <div class="col-1of3" id="menu">
               <!-- <img class="menu"src="img/soup.jpg" width="210" height="150"> -->
               <div class="view-first">  
-                  <a href="detailview.html"><img class="menu"src="img/soup.jpg" width="210" height="150"></a>
+                  <a href="detailview.html"><img class="menu"src="img/soup.jpg"></a>
                  <div class="mask">  
                      <a href="detailview.html" class="info">VIEW DETAILS</a>  
                  </div>  
@@ -212,13 +213,13 @@
               <p class="cartProw">$3.50</p>
               <p class="cartDrow">Carrot, potato and pork ribs</p>
               <img class="rating"src="img/star.jpg">
-              <a class="prodcomment" href="">56 Comments</a>
+              <a class="prodcomment" href="detailview.html">56 Comments</a>
             </div>
 
             <div class="col-1of3" id="menu">
               <!-- <img class="menu"src="img/soup_pork.jpg" width="210" height="150"> -->
               <div class="view-first">  
-                  <a href="detailview.html"><img class="menu"src="img/soup_pork.jpg" width="210" height="150"></a>
+                  <a href="detailview.html"><img class="menu"src="img/soup_pork.jpg"></a>
                  <div class="mask">  
                      <a href="detailview.html" class="info">VIEW DETAILS</a>  
                  </div>  
@@ -227,13 +228,13 @@
               <p class="cartProw">$3.50</p>
               <p class="cartDrow">Corn, cabbage and juicy pork</p>
               <img class="rating"src="img/star.jpg">
-              <a class="prodcomment" href="">56 Comments</a>
+              <a class="prodcomment" href="detailview.html">56 Comments</a>
             </div>
 
             <div class="col-1of3" id="menu">
               <!-- <img class="menu"src="img/soup_beef.jpg" width="210" height="150"> -->
               <div class="view-first">  
-                  <a href="detailview.html"><img class="menu"src="img/soup_beef.jpg" width="210" height="150"></a>
+                  <a href="detailview.html"><img class="menu"src="img/soup_beef.jpg"></a>
                  <div class="mask">  
                      <a href="detailview.html" class="info">VIEW DETAILS</a>  
                  </div>  
@@ -242,7 +243,7 @@
               <p class="cartProw">$3.50</p>
               <p class="cartDrow">Beef and lettuce in white soup</p>
               <img class="rating"src="img/star.jpg">
-              <a class="prodcomment" href="">56 Comments</a>
+              <a class="prodcomment" href="detailview.html">56 Comments</a>
             </div>
 
 <!--             <div class="col-1of3" id="menu">
@@ -269,7 +270,7 @@
             <div class="col-1of3" id="menu">
               <!-- <img class="menu"src="img/drink.jpg" width="210" height="150"> -->
               <div class="view-first">  
-                  <a href="detailview.html"><img class="menu"src="img/drink.jpg" width="210" height="150"></a>
+                  <a href="detailview.html"><img class="menu"src="img/drink.jpg"></a>
                  <div class="mask">  
                      <a href="detailview.html" class="info">VIEW DETAILS</a>  
                  </div>  
@@ -278,13 +279,13 @@
               <p class="cartProw">$1.50</p>
               <p class="cartDrow">Iced red tea with slides of lemon</p>
               <img class="rating"src="img/star.jpg">
-              <a class="prodcomment" href="">19 Comments</a>
+              <a class="prodcomment" href="detailview.html">19 Comments</a>
             </div>
 
             <div class="col-1of3" id="menu">
               <!-- <img class="menu"src="img/drink_redbean.jpg" width="210" height="150"> -->
               <div class="view-first">  
-                  <a href="detailview.html"><img class="menu"src="img/drink_redbean.jpg" width="210" height="150"></a>
+                  <a href="detailview.html"><img class="menu"src="img/drink_redbean.jpg"></a>
                  <div class="mask">  
                      <a href="detailview.html" class="info">VIEW DETAILS</a>  
                  </div>  
@@ -293,13 +294,14 @@
               <p class="cartProw">$1.50</p>
               <p class="cartDrow">With vanilla ice cream and mixed red bean at the bottom</p>
               <img class="rating"src="img/star.jpg">
-              <a class="prodcomment" href="">19 Comments</a>
+              <a class="prodcomment" href="detailview.html">19 Comments</a>
             </div>
 
             <div class="col-1of3" id="menu">
               <!-- <img class="menu"src="img/drink_milktea.jpg" width="210" height="150"> -->
               <div class="view-first">  
-                  <a href="detailview.html"><img class="menu"src="img/drink_milktea.jpg" width="210" height="150"></a>
+                  <a href="detailview.html"><img class="menu"src="img/drink_milktea.jpg"
+                    ></a>
                  <div class="mask">  
                      <a href="detailview.html" class="info">VIEW DETAILS</a>  
                  </div>  
@@ -308,7 +310,7 @@
               <p class="cartProw">$1.50</p>
               <p class="cartDrow">Hong Kong style milktea, mixed with the milk and red tea</p>
               <img class="rating"src="img/star.jpg">
-              <a class="prodcomment" href="">19 Comments</a>
+              <a class="prodcomment" href="detailview.html">19 Comments</a>
             </div>
 
 <!--             <div class="col-1of3" id="menu">
@@ -344,7 +346,7 @@
             <div class="col-1of3" id="menu">
               <!-- <img class="menu"src="img/dessert.jpg" width="210" height="150"> -->
               <div class="view-first">  
-                  <a href="detailview.html"><img class="menu"src="img/dessert.jpg" width="210" height="150"></a>
+                  <a href="detailview.html"><img class="menu"src="img/dessert.jpg"></a>
                  <div class="mask">  
                      <a href="detailview.html" class="info">VIEW DETAILS</a>  
                  </div>  
@@ -353,28 +355,28 @@
               <p class="cartProw">$1.50</p>
               <p class="cartDrow">Soak bread in eggs and add milk and sugar</p>
               <img class="rating"src="img/star.jpg">
-              <a class="prodcomment" href="">23 Comments</a>
+              <a class="prodcomment" href="detailview.html">23 Comments</a>
             </div>
 
             <div class="col-1of3" id="menu">
               <!-- <img class="menu"src="img/dessert_pineapplebutter.jpg" width="210" height="150"> -->
               <div class="view-first">  
-                  <a href="detailview.html"><img class="menu"src="img/dessert_pineapplebutter.jpg" width="210" height="150"></a>
+                  <a href="detailview.html"><img class="menu"src="img/dessert_pineapplebutter.jpg"></a>
                  <div class="mask">  
                      <a href="detailview.html" class="info">VIEW DETAILS</a>  
                  </div>  
               </div>
-              <p class="cartNrow">Pineapple Butter Bun</p>
+              <p class="cartNrow">Pineapple Bun</p>
               <p class="cartProw">$1.50</p>
               <p class="cartDrow">Pineapple sweet bun with a thick butter</p>
               <img class="rating"src="img/star.jpg">
-              <a class="prodcomment" href="">23 Comments</a>
+              <a class="prodcomment" href="detailview.html">23 Comments</a>
             </div>
 
             <div class="col-1of3" id="menu">
               <!-- <img class="menu"src="img/dessert_portturnover.jpg" width="210" height="150"> -->
               <div class="view-first">  
-                  <a href="detailview.html"><img class="menu"src="img/dessert_portturnover.jpg" width="210" height="150"></a>
+                  <a href="detailview.html"><img class="menu"src="img/dessert_portturnover.jpg"></a>
                  <div class="mask">  
                      <a href="detailview.html" class="info">VIEW DETAILS</a>  
                  </div>  
@@ -383,13 +385,13 @@
               <p class="cartProw">$1.50</p>
               <p class="cartDrow">Ground pork and seasonings tucked inside</p>
               <img class="rating"src="img/star.jpg">
-              <a class="prodcomment" href="">23 Comments</a>
+              <a class="prodcomment" href="detailview.html">23 Comments</a>
             </div>
 
             <div class="col-1of3" id="menu">
               <!-- <img class="menu"src="img/dessert_eggball.jpg" width="210" height="150"> -->
               <div class="view-first">  
-                  <a href="detailview.html"><img class="menu"src="img/dessert_eggball.jpg" width="210" height="150"></a>
+                  <a href="detailview.html"><img class="menu"src="img/dessert_eggball.jpg"></a>
                  <div class="mask">  
                      <a href="detailview.html" class="info">VIEW DETAILS</a>  
                  </div>  
@@ -398,13 +400,13 @@
               <p class="cartProw">$1.50</p>
               <p class="cartDrow">Made from eggs, sugar, flour and light evaporated milk</p>
               <img class="rating"src="img/star.jpg">
-              <a class="prodcomment" href="">23 Comments</a>
+              <a class="prodcomment" href="detailview.html">23 Comments</a>
             </div>
 
             <div class="col-1of3" id="menu">
               <!-- <img class="menu"src="img/dessert_waffle.jpg" width="210" height="150"> -->
               <div class="view-first">  
-                  <a href="detailview.html"><img class="menu"src="img/dessert_waffle.jpg" width="210" height="150"></a>
+                  <a href="detailview.html"><img class="menu"src="img/dessert_waffle.jpg"></a>
                  <div class="mask">  
                      <a href="detailview.html" class="info">VIEW DETAILS</a>  
                  </div>  
@@ -413,13 +415,13 @@
               <p class="cartProw">$1.50</p>
               <p class="cartDrow">Combine with sugar, condensed milk and butter</p>
               <img class="rating"src="img/star.jpg">
-              <a class="prodcomment" href="">23 Comments</a>
+              <a class="prodcomment" href="detailview.html">23 Comments</a>
             </div>
 
             <div class="col-1of3" id="menu">
               <!-- <img class="menu"src="img/dessert_riceball.jpg" width="210" height="150"> -->
               <div class="view-first">  
-                  <a href="detailview.html"><img class="menu"src="img/dessert_riceball.jpg" width="210" height="150"></a>
+                  <a href="detailview.html"><img class="menu"src="img/dessert_riceball.jpg"></a>
                  <div class="mask">  
                      <a href="detailview.html" class="info">VIEW DETAILS</a>  
                  </div>  
@@ -428,7 +430,7 @@
               <p class="cartProw">$1.50</p>
               <p class="cartDrow">Made from glutinous rice and have red bean fillings</p>
               <img class="rating"src="img/star.jpg">
-              <a class="prodcomment" href="">23 Comments</a>
+              <a class="prodcomment" href="detailview.html">23 Comments</a>
             </div>
 
   				</article>
