--- a/Week5_Grids/news.html
+++ b/Week5_Grids/news.html
@@ -61,34 +61,35 @@
             <p><a href="login.html">LOG IN</a></p>
         </nav>   
       </div>
+
   		<header class="grid">
-  			<div class="col-6of24">
-  				<a href="index.html"><img class="logo" src="img/logo1.jpg" width="225" height="60"></a>
-  			</div>
   			<nav class="header">
+          <div class="col-6of24">
+            <a href="index.html"><img class="logo" src="img/logo1.jpg" width="225" height="60"></a>
+          </div>
 	  			<div class="col-2of24">
-	  				<p><a href="about.html">ABOUT</a></p>
+	  				<p><a id="topnav" href="about.html">ABOUT</a></p>
 	  			</div>
 	  			<div class="col-2of24">
 	  				<p><a class="onpage" href="news.html">NEWS</a></p>
 	  			</div>
 	  			<div class="col-2of24">
-	  				<p><a href="menu.html">MENU</a></p>
+	  				<p><a id="topnav" href="menu.html">MENU</a></p>
 	  			</div>
 	  			<div class="col-4of24">
-	  				<p><a href="choosenoodle.html">CREATE NOODLES</a></p>
+	  				<p><a id="topnav" href="choosenoodle.html">CREATE NOODLES</a></p>
 	  			</div>
 	  			<div class="col-1of24">
 	  				<p></p>
 	  			</div>
 	  			<div class="col-2of24">
-	  				<p><a href="contact.html">CONTACT</a></p>
+	  				<p><a id="topnav" href="contact.html">CONTACT</a></p>
 	  			</div>
 	  			<div class="col-3of24">
-	  				<p><a href="cart.html">MY CART</a></p>
+	  				<p><a id="topnav" href="cart.html">MY CART</a></p>
 	  			</div>
 	  			<div class="col-2of24">
-	  				<p><a href="login.html">LOG IN</a></p>
+	  				<p><a id="topnav" href="login.html">LOG IN</a></p>
 	  			</div>
   			</nav>
   		</header>
@@ -121,8 +122,10 @@
 
   				<article id="events">
   					<h1 class="global">EVENTS</h1>
-  					<P class="events">No events are coming in March 2014.
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eget libero eget arcu ullamcorper vulputate. Fusce tempus euismod massa, at tincidunt ante sollicitudin at. Phasellus viverra lobortis orci nec aliquet. Proin fringilla, enim quis porttitor tincidunt, eros orci feugiat nunc, quis feugiat velit nibh ac augue. Cras vel turpis mattis, cursus metus a, pharetra purus. Maecenas non nisi in lectus bibendum semper. Proin sodales vitae quam id ultricies. Integer commodo eros quis diam scelerisque tempus. Sed ut ornare erat. Aliquam feugiat nunc in posuere auctor. Nullam nisl leo, eleifend et libero quis, venenatis auctor ipsum.</P>
+  					<P class="events">Many events are coming in 2014.
+            <p class="cartNrow">Eating Competition, 10 March 2014 at 12noon</p> 
+            <br><br><p class="events">It is the first time for NOOD to hold the eating competition. It is to celebrate the new store opening in Downtown Vancouver. The winner can get a car! If you can eat a lot, You should join us. You can sign up in our store or email an email to us. If you are free, you can also drop by and enjoy our exciting competition together. </P>
+            <a class="about" href="contact.html">CONTACT US</a>
   				</article>
   			</div>
 
