--- a/Week5_Grids/index3.html
+++ b/Week5_Grids/index3.html
@@ -42,34 +42,33 @@
       </div>
 
   		<header class="grid">
-  			<div class="col-6of24">
-  				<a  href="index.html"><img class="logo" src="img/logo1.jpg" width="225" height="60"></a>
-  			</div>
-       
   			<nav class="header">
+          <div class="col-6of24">
+            <a  href="index.html"><img class="logo" src="img/logo1.jpg" width="225" height="60"></a>
+          </div>
 	  			<div class="col-2of24">
-	  				<p><a href="about.html">ABOUT</a></p>
+	  				<p><a id="topnav" href="about.html">ABOUT</a></p>
 	  			</div>
 	  			<div class="col-2of24">
-	  				<p><a href="news.html">NEWS</a></p>
+	  				<p><a id="topnav" href="news.html">NEWS</a></p>
 	  			</div>
 	  			<div class="col-2of24">
-	  				<p><a href="menu.html">MENU</a></p>
+	  				<p><a id="topnav" href="menu.html">MENU</a></p>
 	  			</div>
 	  			<div class="col-4of24">
-	  				<p><a href="choosenoodle.html">CREATE NOODLES</a></p>
+	  				<p><a id="topnav" href="choosenoodle.html">CREATE NOODLES</a></p>
 	  			</div>
 	  			<div class="col-1of24">
 	  				<p></p>
 	  			</div>
 	  			<div class="col-2of24">
-	  				<p><a href="contact.html">CONTACT</a></p>
+	  				<p><a id="topnav" href="contact.html">CONTACT</a></p>
 	  			</div>
 	  			<div class="col-3of24">
-	  				<p><a href="cart.html">MY CART</a></p>
+	  				<p><a id="topnav" href="cart.html">MY CART</a></p>
 	  			</div>
 	  			<div class="col-2of24">
-	  				<p><a href="login.html">LOG IN</a></p>
+	  				<p><a id="topnav" href="login.html">LOG IN</a></p>
 	  			</div>
   			</nav>
   		</header>
