--- a/Week5_Grids/login.html
+++ b/Week5_Grids/login.html
@@ -12,7 +12,7 @@
   	</head>
 
   	<body>
-  		      <div id="tablet" class="grid">
+  		<div id="tablet" class="grid">
           <div class="col-1of4">
             <a  href="index.html"><img class="logo" src="img/logo3.jpg"></a>
           </div>
@@ -61,37 +61,38 @@
             <p><a href="login.html">LOG IN</a></p>
         </nav>   
       </div>
-  		<header class="grid">
+
+  	<header class="grid">
+  		<nav class="header">
   			<div class="col-6of24">
-  				<a href="index.html"><img class="logo" src="img/logo1.jpg" width="225" height="60"></a>
-  			</div>
-  			<nav class="header">
-	  			<div class="col-2of24">
-	  				<p><a href="about.html">ABOUT</a></p>
-	  			</div>
-	  			<div class="col-2of24">
-	  				<p><a href="news.html">NEWS</a></p>
-	  			</div>
-	  			<div  class="col-2of24">
-	  				<p><a href="menu.html">MENU</a></p>
-	  			</div>
-	  			<div class="col-4of24">
-	  				<p><a href="choosenoodle.html">CREATE NOODLES</a></p>
-	  			</div>
-	  			<div class="col-1of24">
-	  				<p></p>
-	  			</div>
-	  			<div class="col-2of24">
-	  				<p><a href="contact.html">CONTACT</a></p>
-	  			</div>
-	  			<div class="col-3of24">
-	  				<p><a href="cart.html">MY CART</a></p>
-	  			</div>
-	  			<div class="col-2of24">
-	  				<p><a class="onpage" href="login.html">LOG IN</a></p>
-	  			</div>
-  			</nav>
-  		</header>
+            	<a  href="index.html"><img class="logo" src="img/logo1.jpg" width="225" height="60"></a>
+          	</div>
+			<div class="col-2of24">
+	  			<p><a id="topnav" href="about.html">ABOUT</a></p>
+	  		</div>
+	  		<div class="col-2of24">
+	  			<p><a id="topnav" href="news.html">NEWS</a></p>
+	  		</div>
+	  		<div class="col-2of24">
+	  			<p><a id="topnav" href="menu.html">MENU</a></p>
+	  		</div>
+	  		<div class="col-4of24">
+	  			<p><a id="topnav" href="choosenoodle.html">CREATE NOODLES</a></p>
+	  		</div>
+	  		<div class="col-1of24">
+	  			<p></p>
+	  		</div>
+	  		<div class="col-2of24">
+	  			<p><a id="topnav" href="contact.html">CONTACT</a></p>
+	  		</div>
+	  		<div class="col-3of24">
+	  			<p><a id="topnav" href="cart.html">MY CART</a></p>
+	  		</div>
+	  		<div class="col-2of24">
+	  			<p><a class="onpage" href="login.html">LOG IN</a></p>
+	  		</div>
+  		</nav>
+  	</header>
 
   		<article id="content">
   			<div class="grid">
@@ -111,7 +112,7 @@
 								<label  for ="form-name">PASSWORD:</label>
 								<input class="login" type="password" id="form-name" name="form-name" placeholder="">
 		  					</form>
-		  					<a class="buynowBut" href="">LOG IN</a>
+		  					<a class="buynowBut" href="profile.html">LOG IN</a>
 	  					</div>
 	  				</div>
 	  				
